--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "pdf-parse": "^1.1.1",
+    "pptxgenjs": "^4.0.1",
     "zod": "^3.25.76"
   },
   "devDependencies": {
